RIHAKB-1021, Spring-boot as an application parent, Spring and Hibernate ver increase, Java ver increase