@@ -1,29 +1,6 @@
 package ee.eesti.riha.rest.integration.main_resource;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.List;
-
-import javax.ws.rs.core.Response;
-
-import org.apache.cxf.jaxrs.client.JAXRSClientFactory;
-import org.apache.cxf.jaxrs.client.WebClient;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.annotation.Rollback;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
-
 import com.google.gson.JsonObject;
-
 import ee.eesti.riha.rest.MyTestRunner;
 import ee.eesti.riha.rest.TestHelper;
 import ee.eesti.riha.rest.error.ErrorCodes;
@@ -34,11 +11,32 @@ import ee.eesti.riha.rest.integration.TestFinals;
 import ee.eesti.riha.rest.logic.Finals;
 import ee.eesti.riha.rest.logic.util.JsonHelper;
 import ee.eesti.riha.rest.service.ApiClassicService;
+import org.apache.cxf.jaxrs.client.JAXRSClientFactory;
+import org.apache.cxf.jaxrs.client.WebClient;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.annotation.Rollback;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.web.WebAppConfiguration;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
+
+import javax.ws.rs.core.Response;
+import java.io.InputStream;
+import java.util.ArrayList;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 @Transactional
-// @RunWith(SpringJUnit4ClassRunner.class)
 @RunWith(MyTestRunner.class)
-@ContextConfiguration("classpath*: **/integration-test-applicationContext.xml")
+@WebAppConfiguration
+@ContextConfiguration("/integration-test-applicationContext.xml")
 public class TestApiClassicServiceImpl_POST<T> {
 
   // general info here
@@ -80,7 +78,7 @@ public class TestApiClassicServiceImpl_POST<T> {
     String resultKey = StringUtils.deleteAny(jsonReturned, "[]");
     String id1 = resultKey.replace(".0", "");
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id1));
-    idUnderTestList.add(new Integer(id1));
+    idUnderTestList.add(Integer.valueOf(id1));
 
   }
 
@@ -169,7 +167,7 @@ public class TestApiClassicServiceImpl_POST<T> {
     String[] keys = resultKeys.split(",");
     assertEquals(1, keys.length);
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[0]));
-    idUnderTestList.add(new Integer(keys[0]));
+    idUnderTestList.add(Integer.valueOf(keys[0]));
 
   }
 
@@ -196,8 +194,8 @@ public class TestApiClassicServiceImpl_POST<T> {
     assertEquals(2, keys.length);
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[0]));
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(keys[1]));
-    idUnderTestList.add(new Integer(keys[0]));
-    idUnderTestList.add(new Integer(keys[1]));
+    idUnderTestList.add(Integer.valueOf(keys[0]));
+    idUnderTestList.add(Integer.valueOf(keys[1]));
 
   }
 
@@ -242,8 +240,8 @@ public class TestApiClassicServiceImpl_POST<T> {
     String id2 = items.get(1).toString().replace(".0", "");
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id1));
     assertTrue(org.apache.commons.lang3.StringUtils.isNumeric(id2));
-    idUnderTestList.add(new Integer(id1));
-    idUnderTestList.add(new Integer(id2));
+    idUnderTestList.add(Integer.valueOf(id1));
+    idUnderTestList.add(Integer.valueOf(id2));
     List<RihaRestError> errors = partErrData.getErrors();
     assertEquals(2, errors.size());
     assertEquals(ErrorCodes.INPUT_JSON_REQUIRED_PROPERTIES_MISSING, errors.get(0).getErrcode());
